# VibeGraph

./: .env.example  .gitignore  MCP_SETUP.md  Project_Story.md  README.md  SPEC.md  Scripts.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py  context_service.py  graph_service.py  readme_service.py  warning_service.py
backend/app/domain/: __init__.py  context_models.py  graph_models.py  output_paths.py  readme_models.py  warning_models.py
backend/app/infrastructure/: __init__.py  event_broker.py  openrouter_client.py  output_directory.py  parsers.py  project_watcher.py  scanner.py
backend/tests/: test_accuracy.py  test_context_service.py  test_graph_service.py  test_health.py  test_output_directory.py  test_performance.py  test_readme_service.py  test_scanner_and_parsers.py  test_watcher_and_warnings.py
backend/tests/fixtures/accuracy_project/: expected.json  package.json
backend/tests/fixtures/accuracy_project/src/: app.tsx  broken.ts  index.ts  uses-ui.ts
backend/tests/fixtures/accuracy_project/src/cycle/: alpha.ts  beta.ts
backend/tests/fixtures/accuracy_project/src/legacy/: config.js
cli/: LICENSE  README.md  package.json  tsconfig.json
demo/backend/: pyproject.toml
demo/backend/app/: __init__.py  main.py
demo/backend/app/models/: auth_models.py  errors.py
demo/backend/app/routes/: auth_routes.py
demo/backend/app/services/: session_service.py
demo/backend/app/tools/: __init__.py  activity_tool.py
demo/backend/tests/: test_auth_flow.py
(+117 files in other folders)
