[project]
name = "vibegraph-backend"
version = "0.1.0"
description = "Local analysis API for VibeGraph"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.0",
  "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
