[project]
name = "vibegraph-backend"
version = "0.1.0"
description = "Local analysis API for VibeGraph"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.0",
  "httpx==0.28.1",
  "networkx==3.6.1",
  "python-dotenv==1.2.1",
  "uvicorn[standard]==0.40.0",
  "watchdog==6.0.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
