[project]
name = "vibegraph-demo-backend"
version = "0.1.0"
description = "Deliberately small auth service for the VibeGraph demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.0",
  "httpx==0.28.1",
  "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
